--- a/PROD/company/companyINT-fr.html
+++ b/PROD/company/companyINT-fr.html
@@ -13,28 +13,29 @@
     <meta name='description' content="Formularies du processus d'inscription réglementaire"/>
     <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR"/>
     <meta name="author" content="Santé Canada"/>
-    <meta property="dcterms.title" content="Modèle de l'entreprise: Processus d'Inscription Réglementaire - Canada.ca">
-    <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
-    <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-07-31">
-    <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
-    <meta property="dcterms.language" title="ISO639-2/T" content="fra">
+    <meta property="dcterms.title" content="'Modèle de compagnie': Processus d'Inscription Réglementaire - Canada.ca"/>
+    <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
+    <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"/>
+    <meta property="dcterms.modified" title="W3CDTF" content="2023-02-14"/>
+    <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire"/>
+    <meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
          wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Modèle de l'entreprise: Processus d'Inscription Réglementaire - Canada.ca</title>
+    <title>'Modèle de compagnie': Processus d'Inscription Réglementaire - Canada.ca</title>
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <!-- Additional analytics, if required. -->
     <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
     <!-- Load closure template scripts -->
-    <script src="../wet-boew/js/soyutils.js"></script>
-    <script src="../wet-boew/js/wet-fr.js"></script>
+    <script src="../GCWeb/v4.0.41/js/wet-fr.js" crossorigin="anonymous"></script>
+    <script src="../GCWeb/v4.0.41/js/soyutils.js" crossorigin="anonymous"></script>
+
     <noscript>
+    	<link rel="stylesheet" href="../GCWeb/wet-boew/css/noscript.min.css" />
         <!-- Write closure fall-back static file -->
         <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
     </noscript>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" integrity="sha384-+2PnMSZobRWHUFuaarq2tDCtf7FFSZpeMRVRe7C0l8bRZMBTjUinKl1AuYRON/A2" crossorigin="anonymous"/>
-    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
+    <link rel="stylesheet" href="../GCWeb/v4.0.41/css/wai-wcag.css" />
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
     <link rel="stylesheet" href="app/styles/select.min.css">
@@ -46,10 +47,129 @@
         document.write(wet.builder.refTop({
             cdnEnv: "prod" //jqueryEnv:false
         }));
+        function addLeavingChk(){
+            window.addEventListener('beforeunload', function(event){
+                return 'The form has been updated, do you want to stay on the page?';
+            });
+            window.onbeforeunload = function(){
+                return 'The form has been updated, do you want to stay on the page?';
+            }
+            $('.modal-body:first-child').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Close (escape key)">Close<span class="wb-inv">(escape key)</span></button></div>');
+            setTimeout(setupDateFields, 1000);
+            setTimeout(setupDataList, 1000);
+            setTimeout(initialTopExpandCollapse, 1000);
+        }
+        var maxDateTimes = 6;
+        function setupDateFields(){
+            initialDateInput();
+        }
+        function initialDateInput(){
+            if($( "input[type=date]" ).length == 0 && maxDateTimes > 0) {
+                setTimeout(setupDateFields, 300);
+                maxDateTimes --;
+            } else {
+                try {
+//                    window.location.href = "#main";
+                    $( "input[type=date]" ).trigger( "wb-init.wb-date" );
+                } catch( err ) {
+                    if(maxDateTimes < 1){
+                        maxDateTimes = 8;
+                    }
+                    setTimeout(setupDateFields, 500);
+                }
+            }
+        }
+        var maxDataListTimes = 6;
+        function setupDataList(){
+            initialDataList();
+        }
+        function initialDataList(){
+            if($( "input[type=list]" ).length == 0 && maxDataListTimes > 0) {
+                setTimeout(setupDataList, 200);
+                maxDataListTimes --;
+            } else {
+                $( "input[type=list]" ).trigger( "wb-init.wb-datalist" );
+            }
+        }
+        function initialTopExpandCollapse(){
+            if($("ng-form[name='drugProdCtrl.drugProdForm']").length > 0){
+                $('#expand_collapse_top_btns').removeClass('hide');
+            }
+        }
+        function onchange(e) {
+            console.log(e);
+        }
+        function focusOnRow(e, alter) {
+            var myTable = $(e).closest('table');
+            var myForm = $(e).closest('ng-form');
+            window.setTimeout(function(){
+                $('html, body').animate({
+                    scrollTop: $(myTable).offset().top + 'px'
+                }, 'fast');
+                var myTr = $(myTable).find('tr').last();
+                var errSum = $(myForm).find('div[id*="errors-summary"]:visible');
+                if ($(errSum).length > 0) {
+                    $(errSum).find('section').focus();
+                } else {
+                    if (!$(myTr).attr('id')) {
+                        myTr = $(myTr).prev();
+                    }
+                    var td = $(myTr).find(' > td ').first();
+                    if ($(td).length < 1) {
+                        if (alter != '') {
+                            var parent = $(myTable);
+                            var button = $(parent).find('button[id^=' + alter + ']');
+                            while ($(button).length < 1) {
+                                parent = $(parent).parent();
+                                button = $(parent).find('button[id^=' + alter + ']');
+                            }
+                            $(button).focus();
+                        } else {
+                            $(myTable).focus();
+                        }
+                    } else {
+                        $(td).focus();
+                    }
+                }
+            }, 100);
+        }
+        function focusOnTable(node, idStartWith){
+            var myTable = null;
+            if(node != null){
+                myTable = $(node).closest('tr').find('table[id^=' + idStartWith + ']')[0];
+            }
+            if(myTable != null){
+                $('html, body').animate({
+                    scrollTop: $(myTable).offset().top + 'px'
+                }, 'fast');
+                window.setTimeout(function() {
+                    var myTr = $(myTable).find('> tbody > tr').last();
+                    var myTrId = $(myTr).attr('id');
+                    if(! myTrId || myTrId == ''){
+                        myTr = $(myTr).prev();
+                    }
+                    var myTd = $(myTr).find(' > td ').first();
+                    $(myTd).focus();
+                }, 100);
+            }
+        }
+        function focusOnProvince(e){
+                var node = $(e).parent().parent().parent().next();
+            window.setTimeout(function() {
+                var id = $(node).find('[id^="province_"],[id^="state_"],[id^="proveState_"]').attr('id');
+                $('#' + id).focus();
+            }, 200);
+        }
+        function expandAll(theClass){
+            $('.' + theClass).filter(function(){return ! $(this).attr('open')}).attr('open','open');
+        }
+        function collapseAll(theClass){
+            $('.' + theClass).filter(function(){return $(this).attr('open')}).removeAttr('open');
+        }
     </script>
 </head>
 
-<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;">
+<body vocab="http://schema.org/" typeof="WebPage" onload="addLeavingChk();">
 <div id="def-top">
     <!-- Write closure fall-back static file -->
     <!-- ./wet_4_0_27/cdts/static/top-fr.html-->
@@ -78,12 +198,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Modèle de l'entreprise: Processus d'Inscription Réglementaire</h1>
+            <h1 property="name" id="wb-cont">'Modèle de compagnie': Processus d'Inscription Réglementaire (Version 4.2.4)</h1>
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
         </div>
-        <div class=" col-md-12 module-table-contents">
+        <div class=" col-md-12 module-table-contents" id="content_table">
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
                     <h2  class="panel-title">Table de matières</h2>
@@ -109,20 +229,21 @@
     <!-- end main content -->
 
     <!--content ends here -->
-    <div id="def-preFooter">
-        <!-- Write closure fall-back static file -->
-        <!-- ./wet_4_0_27/cdts/static/preFooter-fr.html-->
-        <!--# include virtual="/rep-dev/cdts/static/preFooter-fr.html"-->
-    </div>
+	<div id="repPreFooter" class="pagedetails container">
+	  <div class="row">
+	  	<div id="repProblemReport" class="col-sm-6 col-md-5 col-lg-4" data-ajax-replace="../GCWeb/ajax/prefooter-v2-fr.html"></div>
+	  	<div id="repSocialShare" class="wb-share col-sm-4 col-md-3 col-sm-offset-2 col-md-offset-4 col-lg-offset-5" data-wb-share='{"lnkClass": "btn btn-default btn-block"}'></div>
+	  </div>
+	  <dl id="wb-dtmd">
+	    <dt>Date de modification :</dt>
+	    <dd>
+	      <time property="dateModified">
+	        2023-02-14
 
-    <!-- Write closure template -->
-    <script type="text/javascript">
-        var defPreFooter = document.getElementById("def-preFooter");
-        defPreFooter.outerHTML = wet.builder.preFooter({
-            cdnEnv: "prod",
-            dateModified: "2019-07-31"
-        });
-    </script>
+	      </time>
+	    </dd>
+	  </dl>
+	</div>
 </main>
 <div id="def-footer">
     <!-- Write closure fall-back static file -->
@@ -160,7 +281,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppINT-fr_20190731_1043.min.js"></script>
+<script src="app/scripts/companyAppINT-fr_20230214_1110.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
