--- a/transaction/fr/réglementaire-transaction.html
+++ b/transaction/fr/réglementaire-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-01-13">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-05">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -49,7 +49,7 @@
 				"cdnEnv": "dev"
 			}));
 		</script>
-	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-BPACRPQL.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-BPACRPQL.css"></noscript></head>
+	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-KP4ONJHE.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KP4ONJHE.css"></noscript></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-01-13",
+					"dateModified": "2025-02-05",
 					"cdnEnv": "dev"
 				});
 			</script>
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-74SWDGGA.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-JSAKPYHU.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-67KLDFVK.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-KKFU4WYX.js" type="module"></script></body>
 </html>
