--- a/transaction/fr/réglementaire-transaction.html
+++ b/transaction/fr/réglementaire-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-05">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-13">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-02-05",
+					"dateModified": "2025-02-13",
 					"cdnEnv": "dev"
 				});
 			</script>
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-RFUW6LMT.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-6VUKAMHL.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-I6EVGJRV.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-I6ZZ6FWF.js" type="module"></script></body>
 </html>
