--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-28">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-18">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -52,6 +52,9 @@
 				}, {
 					"title": "Santé Canada",
 					"href": "https://www.canada.ca/fr/sante-canada.html"
+				}, {
+					"title": "Processus d’inscription réglementaire (PIR) - Canada.ca",
+					"href": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/processus-inscription-reglementaire.html"
 				}], 
 				"cdnEnv": "prod"
 			});
@@ -65,6 +68,41 @@
 			
 
 			
+			<h3>Publication du 26 mars 2025</h3>
+			
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th scope="col">Modèle</th>
+							<th scope="col">Modification</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="col-md-3">Le modèle de transaction réglementaire (TR)<br>Version 5.0.0</td>
+							<td class="col-md-9">
+								<ul>
+									<li>Ajout d'instructions concernant la section « Charger un fichier d’inscription de transaction réglementaire »</li>
+									<li>Réorganiser la section « Détails de la transaction »</li>
+									<li>Ajout de la bulle d’information pour numéro de contrôle</li>
+									<li>Suppression du type d'activité réglementaire : PDN CV</li>
+									<li>Ajout d’une description de transaction réglementaire : Demande de rapport(s) d'examen à responsable : Vigilance post-commercialisation (pour la Direction des produits de santé commercialisés (DPSC))</li>
+									<li>Suppression de la question « Les frais nouveaux ou révisés sont-ils associés à ces transactions ? » </li>
+									<li>Ajout catégorie de la présentation – Sans objet </li>
+									<li>Suppression de l'identificateur d'acheminement</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td class="col-md-3">Ensemble de feuilles de style</td>
+							<td class="col-md-9">
+								<ul>
+									<li>Nouvelle feuille de style TR pour correspondre aux modifications apportées à ce modèle</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			<h3>Publication du 28 octobre 2024</h3>
 			
 				<table class="table table-bordered">
@@ -377,7 +415,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-10-28",
+					"dateModified": "2025-02-18",
 					"cdnEnv": "prod"
 				});
 			</script>
