--- a/version_history.html
+++ b/version_history.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-28">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-18">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -53,6 +53,9 @@
 				}, {
 					"title": "Health Canada",
 					"href": "https://www.canada.ca/en/health-canada.html"
+				}, {
+					"title": "Regulatory enrolment process (REP) - Canada.ca",
+					"href": "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process.html"
 				}],
 				"cdnEnv": "prod"
 			});
@@ -66,6 +69,41 @@
 			
 
 			
+			<h3>March 26, 2025 Release</h3>
+			
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th scope="col">Template</th>
+							<th scope="col">Change</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="col-md-3">Regulatory Transaction (RT) Template<br>Version 5.0.0</td>
+							<td class="col-md-9">
+								<ul>
+									<li>Added instructions regarding the “Load a regulatory transaction enrolment file” section</li>
+									<li>Reordered “Transaction details” section</li>
+									<li>Added info bubble for the control number</li>
+									<li>Removed the regulatory activity type: NDS CV</li>
+									<li>Added regulatory transaction description: Request for review report(s) to lead: Post-market vigilance (for Marketed Health Products Directorate (MHPD))</li>
+									<li>Removed the question “Are there new or revised fees associated with this transactions?”</li>
+									<li>Added submission class: Not applicable</li>
+									<li>Removed routing identifier</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td class="col-md-3">Stylesheet Package</td>
+							<td class="col-md-9">
+								<ul>
+									<li>New RT stylesheet to match changes on this template</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			<h3>October 28, 2024 Release</h3>
 			
 				<table class="table table-bordered">
@@ -379,7 +417,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-10-28",
+					"dateModified": "2025-02-18",
 					"cdnEnv": "prod"
 				});
 			</script>
