--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-18">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -79,7 +79,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="col-md-3">Le modèle de transaction réglementaire (TR)<br>Version 5.0.0</td>
+							<td class="col-md-3">Le modèle de transaction réglementaire (TR)<br>Version 5.0.0<br><br><br>Ensemble de feuilles de style*</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Ajout d'instructions concernant la section « Charger un fichier d’inscription de transaction réglementaire »</li>
@@ -89,15 +89,8 @@
 									<li>Ajout d’une description de transaction réglementaire : Demande de rapport(s) d'examen à responsable : Vigilance post-commercialisation (pour la Direction des produits de santé commercialisés (DPSC))</li>
 									<li>Suppression de la question « Les frais nouveaux ou révisés sont-ils associés à ces transactions ? » </li>
 									<li>Ajout catégorie de la présentation – Sans objet </li>
-									<li>Suppression de l'identificateur d'acheminement</li>
-								</ul>
-							</td>
-						</tr>
-						<tr>
-							<td class="col-md-3">Ensemble de feuilles de style</td>
-							<td class="col-md-9">
-								<ul>
-									<li>Nouvelle feuille de style TR pour correspondre aux modifications apportées à ce modèle</li>
+									<li>Suppression de l'identificateur d'acheminement<br><br><br></li>
+									<li>*Nouvelle feuille de style TR pour correspondre aux modifications apportées à ce modèle</li>
 								</ul>
 							</td>
 						</tr>
@@ -415,7 +408,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-02-18",
+					"dateModified": "2025-02-28",
 					"cdnEnv": "prod"
 				});
 			</script>
