--- a/version_history.html
+++ b/version_history.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-18">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -80,7 +80,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="col-md-3">Regulatory Transaction (RT) Template<br>Version 5.0.0</td>
+							<td class="col-md-3">Regulatory Transaction (RT) Template<br>Version 5.0.0<br><br><br>Stylesheet package*</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Added instructions regarding the “Load a regulatory transaction enrolment file” section</li>
@@ -90,15 +90,8 @@
 									<li>Added regulatory transaction description: Request for review report(s) to lead: Post-market vigilance (for Marketed Health Products Directorate (MHPD))</li>
 									<li>Removed the question “Are there new or revised fees associated with this transactions?”</li>
 									<li>Added submission class: Not applicable</li>
-									<li>Removed routing identifier</li>
-								</ul>
-							</td>
-						</tr>
-						<tr>
-							<td class="col-md-3">Stylesheet Package</td>
-							<td class="col-md-9">
-								<ul>
-									<li>New RT stylesheet to match changes on this template</li>
+									<li>Removed routing identifier<br><br><br></li>
+									<li>*New RT stylesheet to match changes on this template</li>
 								</ul>
 							</td>
 						</tr>
@@ -417,7 +410,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-02-18",
+					"dateModified": "2025-02-28",
 					"cdnEnv": "prod"
 				});
 			</script>
