--- a/company/en/company.html
+++ b/company/en/company.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-03">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-15">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -173,7 +173,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-03",
+					"dateModified": "2025-04-15",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -250,5 +250,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-S6NW4OFF.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-PGKLL2AI.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-MAYIGXNQ.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-A5KDBR7N.js" type="module"></script></body>
 </html>
