--- a/certificate2025/external/en/certificate-supplementary-protection-form-2025.html
+++ b/certificate2025/external/en/certificate-supplementary-protection-form-2025.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-10">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-16">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Certificate of Supplementary Protection (CSP) Information"/>
@@ -172,7 +172,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-10",
+					"dateModified": "2025-04-16",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -249,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-YBNZ3Y7X.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-VQME6ZX6.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-ZZV6QLFZ.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-P6DMPWEJ.js" type="module"></script></body>
 </html>
