--- a/certificate2025/internal/fr/formulaire-certificat-protection-supplementaire-internal.html
+++ b/certificate2025/internal/fr/formulaire-certificat-protection-supplementaire-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-10">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-16">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formulaire de la demande de certificat de protection supplémentaire (CPS)">
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-10",
+					"dateModified": "2025-04-16",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-WDYJRKLF.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-L4XHFUAU.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-O3FSK7M7.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-HFV6SU6V.js" type="module"></script></body>
 </html>
