--- a/versionHistory/historique_révisions.html
+++ b/versionHistory/historique_révisions.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-29">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-01">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -85,7 +85,7 @@
 									<li>Ajout de la bulle d’information pour modèle de compagnie</li>
 									<li>Ajout d'instructions concernant la section « Charger un fichier d’inscription de la compagnie »</li>
 									<li>Suppression de l'identificateur d'acheminement</li>
-									<li>Ajout  de la question « Sélectionnez un ou plusieurs des cadres réglementaires suivants en vertu duquel/desquels le fabricant/promoteur pourrait déposer une présentation/demande »</li>
+									<li>Ajout  de la question « Sélectionnez un ou plusieurs des cadres réglementaires suivants en vertu duquel/desquels le fabricant/promoteur pourrait déposer une présentation/demande »<br><br><br></li>
 									<li>*Nouvelle feuille de style CO pour correspondre aux modifications apportées à ce modèle</li>
 								</ul>
 							</td>
@@ -432,7 +432,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-29",
+					"dateModified": "2025-05-01",
 					"cdnEnv": "prod",
 					"showShare": false
 				});
