--- a/versionHistory/version_history.html
+++ b/versionHistory/version_history.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-29">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-01">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -86,7 +86,7 @@
 									<li>Added info bubble for the company template</li>
 									<li>Added instructions in the “Load a company enrolment file” section</li>
 									<li>Removed routing identifier</li>
-									<li>Added the question “Select one or more of the following regulatory frameworks under which the manufacturer/sponsor company will be filing submissions/applications</li>
+									<li>Added the question “Select one or more of the following regulatory frameworks under which the manufacturer/sponsor company will be filing submissions/applications”<br><br><br></li>
 									<li>*New CO stylesheet to match changes on this template</li>
 								</ul>
 							</td>
@@ -434,7 +434,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-29",
+					"dateModified": "2025-05-01",
 					"cdnEnv": "prod",
 					"showShare": false
 				});
